--- a/Hotel_Booking_Analysis_Capstone_Project.ipynb
+++ b/Hotel_Booking_Analysis_Capstone_Project.ipynb
@@ -225,6 +225,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## ***1. Know Your Data***"
+      ],
+      "metadata": {
+        "id": "qzcwWQFmUEUa"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "dByMsuzT8Tnw"
@@ -1202,7 +1211,7 @@
         "outputId": "6d98dcaa-dd18-4976-ecb1-34cce369907b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 593
+          "height": 805
         }
       },
       "execution_count": 18,
@@ -1319,6 +1328,15 @@
       },
       "execution_count": 22,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## ***2. Understanding Your Variables***"
+      ],
+      "metadata": {
+        "id": "8Sbu5jn-Uhqo"
+      }
     },
     {
       "cell_type": "markdown",
@@ -2071,7 +2089,7 @@
         "outputId": "924c0405-3105-4e01-cb52-5ac5ca4a9def",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 603
+          "height": 790
         }
       },
       "execution_count": 35,
@@ -2171,7 +2189,7 @@
         "outputId": "d05bf852-c317-4055-ea13-4e07cee3b4d1",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 443
+          "height": 474
         }
       },
       "execution_count": 37,
@@ -2466,7 +2484,7 @@
         "outputId": "5f162867-8f2b-464b-8912-d8c79529c6bb",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 436
+          "height": 590
         }
       },
       "execution_count": 40,
@@ -2708,7 +2726,7 @@
         "outputId": "1cb65ded-0c20-4a64-ef1a-ea227a4ae6e5",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 632
+          "height": 858
         }
       },
       "execution_count": 42,
@@ -2984,7 +3002,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 574
+          "height": 778
         },
         "id": "gzUuC5239A9y",
         "outputId": "853be574-8687-4a04-8ab8-d2d41beb27ac"
@@ -3074,7 +3092,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 840
+          "height": 899
         },
         "id": "4atkeAp09yWE",
         "outputId": "7b6d31cf-c8f3-47e0-9b47-6f69101ec0e7"
@@ -3796,7 +3814,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 645
+          "height": 674
         },
         "id": "z_TkXHA0-qJc",
         "outputId": "dbcadc41-d989-4440-bda2-e407ab811690"
@@ -3970,7 +3988,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 313
+          "height": 421
         },
         "id": "DnDl1OjumY20",
         "outputId": "3ebf268e-3852-4084-9cfb-f757f89c91cc"
@@ -4337,7 +4355,7 @@
         "outputId": "ea42b759-994f-4558-bc10-59b6689ed26f",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 574
+          "height": 779
         }
       },
       "execution_count": 67,
@@ -4395,7 +4413,7 @@
         "outputId": "5b23033f-5aa3-4624-d060-623df1a74378",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 882
+          "height": 862
         }
       },
       "execution_count": 68,
@@ -4462,7 +4480,7 @@
         "outputId": "be5cec9d-f87f-496d-f6fb-4a209e6d0734",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 581
+          "height": 735
         }
       },
       "execution_count": 69,
@@ -4514,7 +4532,7 @@
         "outputId": "ad8e19c0-d051-4d51-aa27-d25c32da8141",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 604
+          "height": 813
         }
       },
       "execution_count": 70,
@@ -4576,7 +4594,7 @@
         "outputId": "26c130c7-7a45-4360-dad0-f00c4d0ce4b9",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 611
+          "height": 749
         }
       },
       "execution_count": 71,
@@ -4626,7 +4644,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 598
+          "height": 805
         },
         "outputId": "75fc88aa-b29d-40ee-e7e3-81149268f5b1",
         "id": "1wrpUHhyuAMs"
