--- a/Hotel_Booking_Analysis_Capstone_Project.ipynb
+++ b/Hotel_Booking_Analysis_Capstone_Project.ipynb
@@ -135,11 +135,10 @@
         "id": "Y06xIdG26kRF"
       },
       "source": [
-        "## <b> Have you ever wondered when the best time of year to book a hotel room is? Or the optimal length of stay in order to get the best daily rate? What if you wanted to predict whether or not a hotel was likely to receive a disproportionately high number of special requests? This hotel booking dataset can help you explore those questions!\n",
+        "## <b> For this project we will be analyzing hotel booking data. <b>\n",
         "\n",
         "## <b>This data set contains booking information for a city hotel and a resort hotel, and includes information such as when the booking was made, length of stay, the number of adults, children, and/or babies, and the number of available parking spaces, among other things. All personally identifying information has been removed from the data. </b>\n",
-        "\n",
-        "## <b> Explore and analyze the data to discover important factors that govern the bookings. </b>"
+        "\n"
       ]
     },
     {
@@ -154,7 +153,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "***Discover important factors that govern the bookings.***"
+        "*** <b> The main objective behind this project is to explore and analyze data to discover important factors that govern the booking and give insights to hotel management which can perform various campaigns to the business and performance. </b>.***"
       ],
       "metadata": {
         "id": "9l_Ia2qHC3dW"
@@ -247,7 +246,7 @@
         "import seaborn as sns\n",
         "%matplotlib inline"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -263,7 +262,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -284,7 +283,7 @@
       "metadata": {
         "id": "ln74s_BU9We0"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -302,7 +301,7 @@
         "id": "A2kR-yNa9pz7",
         "outputId": "56046867-46cb-4f34-bb72-daf90394a4b2"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -620,7 +619,7 @@
         "id": "elJrNld8CBSu",
         "outputId": "19c509d3-7e0a-41fe-b906-c96ecff30f80"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -944,7 +943,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -972,7 +971,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1031,7 +1030,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1094,7 +1093,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1154,7 +1153,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1214,7 +1213,7 @@
           "height": 805
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1259,7 +1258,7 @@
       "metadata": {
         "id": "MGhhGwg4KQ0O"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1282,7 +1281,7 @@
       "metadata": {
         "id": "j1MbCrgIub5E"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1304,7 +1303,7 @@
       "metadata": {
         "id": "-ksPWojxuxTU"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1326,7 +1325,7 @@
       "metadata": {
         "id": "Le-OF-Hzu9NB"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1359,7 +1358,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1385,7 +1384,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1413,7 +1412,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1439,7 +1438,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1469,7 +1468,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1496,7 +1495,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1530,7 +1529,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1570,7 +1569,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1601,7 +1600,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1639,7 +1638,7 @@
       "metadata": {
         "id": "sCqcALfCxu47"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1656,7 +1655,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1685,7 +1684,7 @@
           "height": 364
         }
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2092,7 +2091,7 @@
           "height": 790
         }
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2154,7 +2153,7 @@
           "height": 406
         }
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2192,7 +2191,7 @@
           "height": 474
         }
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2238,7 +2237,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2278,7 +2277,7 @@
           "height": 425
         }
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2487,7 +2486,7 @@
           "height": 590
         }
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2515,7 +2514,7 @@
           "height": 457
         }
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2729,7 +2728,7 @@
           "height": 858
         }
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2771,7 +2770,7 @@
       "metadata": {
         "id": "9bne37Ke8YHD"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2783,7 +2782,7 @@
       "metadata": {
         "id": "NTsWZrue80B-"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2799,7 +2798,7 @@
         "id": "p-ggjyAL87Zx",
         "outputId": "b58dd044-eed1-4b86-d1e2-2205b8678a61"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3007,7 +3006,7 @@
         "id": "gzUuC5239A9y",
         "outputId": "853be574-8687-4a04-8ab8-d2d41beb27ac"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3049,7 +3048,7 @@
       "metadata": {
         "id": "klS3l7KT9cmX"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3062,7 +3061,7 @@
       "metadata": {
         "id": "eNXxFPzU9owe"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3075,7 +3074,7 @@
       "metadata": {
         "id": "ySXbPtZD9skc"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3097,7 +3096,7 @@
         "id": "4atkeAp09yWE",
         "outputId": "7b6d31cf-c8f3-47e0-9b47-6f69101ec0e7"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3145,7 +3144,7 @@
         "id": "-kHF1wMc-DNi",
         "outputId": "e064264f-1c58-4fd3-8062-538cac5b0f7c"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3484,7 +3483,7 @@
       "metadata": {
         "id": "fk02VGkl-d55"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3500,7 +3499,7 @@
         "id": "XDqdYLnw-izX",
         "outputId": "58e7d76e-8943-4612-9b2f-2066917f2720"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3819,7 +3818,7 @@
         "id": "z_TkXHA0-qJc",
         "outputId": "dbcadc41-d989-4440-bda2-e407ab811690"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3864,7 +3863,7 @@
         "id": "Ix9q0xKE-vY9",
         "outputId": "6dac870c-7af0-4a30-d6ae-7961a3b4b3c1"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3892,7 +3891,7 @@
         "id": "0IN4s08Y-0xT",
         "outputId": "6205fbfc-a9ad-4354-86a1-deb280d4ad63"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3921,7 +3920,7 @@
         "id": "DW349sGM-5zr",
         "outputId": "c82750e6-b345-4a31-a094-be6facbf361b"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3960,7 +3959,7 @@
         "id": "IUnvMRHS_HYq",
         "outputId": "1a519333-2798-4cda-a01a-5c6f049e5615"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4000,7 +3999,7 @@
         "sns.lineplot(x='arrival_date_month', y='adr', hue='hotel', data= hotel_df)\n",
         "plt.show()"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4049,7 +4048,7 @@
           "height": 581
         }
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4106,7 +4105,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4132,7 +4131,7 @@
         "\n",
         "total_count = hotel_df[(hotel_df['is_canceled']==0)].shape[0]"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4145,7 +4144,7 @@
         "\n",
         "percentage = [round(len(item)/total_count * 100) for item in [individual,couple,family]]"
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4156,7 +4155,7 @@
       "source": [
         "types_of_accomodation = ['Individual','Couple','Family']"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4173,7 +4172,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4203,7 +4202,7 @@
           "height": 143
         }
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4358,7 +4357,7 @@
           "height": 779
         }
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4416,7 +4415,7 @@
           "height": 862
         }
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4483,7 +4482,7 @@
           "height": 735
         }
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4535,7 +4534,7 @@
           "height": 813
         }
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4597,7 +4596,7 @@
           "height": 749
         }
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4661,7 +4660,7 @@
         "plt.xlim(0,400)\n",
         "plt.ylim(0,100)"
       ],
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
